--- a/flexdashboard_bcrc.Rmd
+++ b/flexdashboard_bcrc.Rmd
@@ -1,13 +1,12 @@
 ---
 title: "BCRC Dashboard"
-date: "</br>Updated: `r format(as.POSIXlt(Sys.time(), tz = 'UTC'), '%b-%d %H:%M UTC')`"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
     vertical_layout: fill
     navbar:
+      - { title: "Twitter", href: "https://twitter.com/cnftstats"}
       - { title: "About", href: "#about" }
-      - { title: "Discord", href: "https://discord.gg/3Sn9pyjw"}
     social: ["menu"]
     css: rmd_flexboard.css
     self_contained: TRUE
@@ -33,6 +32,8 @@ library(DT)
 DT <- readRDS("data/DT.rds")
 DTL <- readRDS("data/DTL.rds")
 RAR <- readRDS("data/RAR_bcrc.rds")
+DTS <- readRDS("data/DTS.rds")
+DTE <- readRDS("data/DTE_bcrc.rds")
 
 img_link <- "https://raw.githubusercontent.com/cnftstats/images/main/bcrc/BCRC"
 
@@ -56,6 +57,18 @@ loj <- function (X = NULL, Y = NULL, onCol = NULL) {
 }
 ```
 
+<!-- Add live timestamp -->
+```{r results='asis'}
+timestamp <- as.numeric(Sys.time())
+cat("
+<script>
+$(document).ready(function(){
+  $('.navbar-author').after('</br><span id=", '"updatedat"', ">Updated: <span data-livestamp=", '"', timestamp, '"', "></span></span>');
+});
+</script>
+", sep = "")
+```
+
 # Sidebar {data-width=80, .sidebar}
 <ul id="sidebar_ul">
   <li id="currentProject"><a href="https://cnftstats.github.io/bcrc.html">BCRC</a></li>
@@ -67,28 +80,30 @@ loj <- function (X = NULL, Y = NULL, onCol = NULL) {
 
 # Floor {data-icon="ion-arrow-graph-up-right"}
 ## Column 1 {data-width=650 .tabset}
-### Price distribution
+### Listings distribution
 ```{r fig.width=8}
 X <- copy(DT)
-X[price %between% c(0, 999),     price_range := trunc(price/50)*50]
-X[price %between% c(1000, 1999), price_range := trunc(price/100)*100]
-X[price %between% c(2000, 14999), price_range := trunc(price/1000)*1000]
-X[price >= 15000, price_range := 15000]
+X[price %between% c(0,     2999),  price_range := trunc(price/100)*100]
+X[price %between% c(3000,  4999),  price_range := trunc(price/500)*500]
+X[price %between% c(5000,  9999),  price_range := trunc(price/1000)*1000]
+X[price %between% c(10000, 24999), price_range := trunc(price/5000)*5000]
+X[price >= 25000,                  price_range := 25000]
 X <- X[complete.cases(price_range), .(price_range, market)]
 num_listings <- nrow(X)
 
 X <- X[, .N, .(price_range, market)][order(price_range)]
-X[price_range %between% c(0, 999),      x_label := paste0(price_range, "-", price_range + (50-1))]
-X[price_range %between% c(1000, 1999),  x_label := paste0(price_range, "-", price_range + (100-1))]
-X[price_range %between% c(2000, 14999), x_label := paste0(price_range, "-", price_range + (1000-1))]
-X[price_range >= 15000,                 x_label := "15000+"]
+X[price_range %between% c(0,     2999),  x_label := paste0(price_range, "-", price_range + (100-1))]
+X[price_range %between% c(3000,  4999),  x_label := paste0(price_range, "-", price_range + (500-1))]
+X[price_range %between% c(5000,  9999),  x_label := paste0(price_range, "-", price_range + (1000-1))]
+X[price_range %between% c(10000, 24999), x_label := paste0(price_range, "-", price_range + (5000-1))]
+X[price_range >= 25000,                  x_label := "25000+"]
 
 .X <- X[, .(price_range, x_label)] %>% unique %>% .[order(price_range)]
 X[, x_label := factor(x_label, levels = .X$x_label)]
 X[, market := factor(market, levels = c("jpg.store", "cnft.io"))]
 
 ggplot(X, aes(x_label, N, fill = market)) +
-  geom_bar(stat = "identity", alpha = .8) +
+  geom_bar(stat = "identity", alpha = .9) +
   geom_text(aes(label = stat(y), group = x_label),
             stat = 'summary', fun = sum, vjust = -.5, hjust = +.55,
             color = "steelblue4", size = 3) +
@@ -109,50 +124,139 @@ ggplot(X, aes(x_label, N, fill = market)) +
         plot.margin = unit(c(0, 15, 0, 0), units = "pt"))
 ```
 
+### Listing distribution over time
+```{r}
+# Is there enough data?
+.hours_ago <- 5
+.data_dates <- DTE[order(data_date), unique(data_date)]
+.data_date_now <- .data_dates[length(.data_dates)]
+.data_date_after <- .data_dates[!(.data_dates %in% .data_date_now)]
+.data_date_after_hours <- difftime(.data_date_now, .data_date_after, units = "hours")
+.enoughData <- ifelse(all(.data_date_after_hours < .hours_ago), FALSE, TRUE)
 
-<!-- ### Floor evolution -->
-<!-- ```{r} -->
-<!-- X <- copy(DT) -->
-<!-- X[price %between% c(0, 999),      price_range := trunc(price/50)*50] -->
-<!-- X[price %between% c(1000, 1999),  price_range := trunc(price/100)*100] -->
-<!-- X[price %between% c(2000, 14999), price_range := trunc(price/1000)*1000] -->
-<!-- X[price >= 15000, price_range := 15000] -->
-<!-- X[, time_ago      := difftime(as_datetime(now()), listed_at, units = "days")] -->
-<!-- X[, time_ago_text := sprintf("%.0f days ago", time_ago)] -->
-<!-- X <- X[complete.cases(price_range), .(price_range, market, time_ago, time_ago_text)][time_ago < 3] -->
+if(!.enoughData) cat("Not enough data at the moment, please come back later.")
+
+# Find data date collection closest to one hour after the first data collection
+.data_date_next <- .data_date_after[which.min(abs(.data_date_after_hours - .hours_ago))]
+.diff_minutes_now_next <- difftime(.data_date_now, .data_date_next, units = "mins")
+```
+
+```{r eval=.enoughData, fig.height=7, fig.width=10}
+X <- DTE[data_date %in% c(.data_date_now, .data_date_next)]
+X[, data_when := fcase(
+  data_date == .data_date_now, "Now",
+  data_date == .data_date_next, sprintf("About %sh ago", .hours_ago)
+)]
+
+data_when_order <- X[order(-data_date), unique(data_when)]
+X[, data_when := factor(data_when, levels = data_when_order)]
+
+X[price %between% c(0,     2999),  price_range := trunc(price/100)*100]
+X[price %between% c(3000,  4999),  price_range := trunc(price/500)*500]
+X[price %between% c(5000,  9999),  price_range := trunc(price/1000)*1000]
+X[price %between% c(10000, 24999), price_range := trunc(price/5000)*5000]
+X[price >= 25000,                  price_range := 25000]
+X <- X[complete.cases(price_range), .(price_range, price, market, data_when)]
+
+CAP <- X[, .(floor = min(price), listings = .N), data_when]
+.caption <- paste0(
+  sprintf("Now: Floor = %s | Listings = %s", CAP[1, floor], CAP[1, listings]),
+  sprintf("\n%sh ago: Floor = %s | Listings = %s", .hours_ago, CAP[2, floor], CAP[2, listings]),
+  "\nSource: https://cnftstats.github.io/"
+)
 
 
-<!-- num_listings <- nrow(X) -->
+X <- X[, .N, .(price_range, market, data_when)][order(price_range)]
+X[price_range %between% c(0,     2999),  x_label := paste0(price_range, "-", price_range + (100-1))]
+X[price_range %between% c(3000,  4999),  x_label := paste0(price_range, "-", price_range + (500-1))]
+X[price_range %between% c(5000,  9999),  x_label := paste0(price_range, "-", price_range + (1000-1))]
+X[price_range %between% c(10000, 24999), x_label := paste0(price_range, "-", price_range + (5000-1))]
+X[price_range >= 25000,                  x_label := "25000+"]
 
-<!-- X <- X[, .N, .(price_range, market, time_ago_text)][order(price_range)] -->
-<!-- X[price_range %between% c(0, 999),      x_label := paste0(price_range, "-", price_range + (50-1))] -->
-<!-- X[price_range %between% c(1000, 1999),  x_label := paste0(price_range, "-", price_range + (100-1))] -->
-<!-- X[price_range %between% c(2000, 14999), x_label := paste0(price_range, "-", price_range + (1000-1))] -->
-<!-- X[price_range >= 15000,                 x_label := "15000+"] -->
+.X <- X[, .(price_range, x_label)] %>% unique %>% .[order(price_range)]
+X[, x_label := factor(x_label, levels = .X$x_label)]
+X[, market  := factor(market, levels = c("jpg.store", "cnft.io"))]
 
-<!-- .X <- X[, .(price_range, x_label)] %>% unique %>% .[order(price_range)] -->
-<!-- X[, x_label := factor(x_label, levels = .X$x_label)] -->
-<!-- X[, market := factor(market, levels = c("jpg.store", "cnft.io"))] -->
+ggplot(X, aes(x_label, N, fill = market, alpha = data_when)) +
+  facet_grid(data_when~.) +
+  geom_bar(stat = "identity") +
+  geom_text(aes(label = stat(y), group = x_label),
+            stat = 'summary', fun = sum, vjust = -.5, hjust = +.55,
+            color = "steelblue4", size = 3) +
+  scale_fill_manual(values = c("jpg.store" = "steelblue3", "cnft.io" = "steelblue4")) +
+  scale_alpha_manual(values = c(0.9, 0.7), guide = "none") +
+  labs(x = "Price range", y = "Number of listings", fill = "", caption = .caption) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = -45, vjust = +.5, hjust = 0,
+                                   color = "grey50", size = 8),
+        axis.text.y = element_text(color = "grey50", size = 8),
+        axis.title = element_text(color = "grey30", size = 10),
+        legend.position = "bottom", legend.justification = 'right', legend.direction = "horizontal",
+        legend.text = element_text(color = "grey50", size = 9),
+        legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"),
+        legend.box.spacing = unit(-10, "points"),
+        plot.caption = element_text(color = "#008B8B", vjust = +15, hjust = 0, size = 9),
+        plot.margin = unit(c(0, 15, 0, 0), units = "pt"))
+```
 
-<!-- ggplot(X, aes(x_label, N, fill = market)) + -->
-<!--   facet_grid(time_ago_text~.) + -->
-<!--   geom_bar(stat = "identity", alpha = .8) + -->
-<!--   geom_text(aes(label = stat(y), group = x_label), -->
-<!--             stat = 'summary', fun = sum, vjust = -.5, hjust = +.55, -->
-<!--             color = "steelblue4", size = 3) + -->
-<!--   scale_fill_manual(values = c("jpg.store" = "steelblue3", "cnft.io" = "steelblue4")) + -->
-<!--   labs(x = "Price range", y = "Number of listings", fill = "", -->
-<!--        caption = sprintf("Floor: %d ada  |  Listings: %d\nSource: https://cnftstats.github.io/", -->
-<!--                          min(DT$price), num_listings)) + -->
-<!--   theme_minimal() + -->
-<!--   theme(axis.text.x = element_text(angle = -45, vjust = +.5, hjust = 0, -->
-<!--                                    color = "grey50", size = 8), -->
-<!--         axis.text.y = element_text(color = "grey50", size = 8), -->
-<!--         legend.position = "top", legend.justification = 'left', legend.direction = "horizontal", -->
-<!--         legend.text = element_text(color = "grey50", size = 8), -->
-<!--         plot.caption = element_text(color = "#008B8B", vjust = +13, hjust = 0, size = 8), -->
-<!--         plot.margin = unit(c(0, 15, 0, 0), units = "pt")) -->
-<!-- ``` -->
+### Sales distribution over time
+```{r fig.height=7, fig.width=10}
+X <- copy(DTS)
+X[, sold_time := trunc(sold_at_days)]
+X[, sold_time := fcase(trunc(sold_at_days) == 0, "0-24h ago",
+                       trunc(sold_at_days) == 1, "24-48h ago",
+                       trunc(sold_at_days) == 2, "48-72h ago")]
+X[price %between% c(0,     2999),  price_range := trunc(price/100)*100]
+X[price %between% c(3000,  4999),  price_range := trunc(price/500)*500]
+X[price %between% c(5000,  9999),  price_range := trunc(price/1000)*1000]
+X[price %between% c(10000, 24999), price_range := trunc(price/5000)*5000]
+X[price >= 25000,                  price_range := 25000]
+X <- X[complete.cases(price_range), .(price_range, price, market, sold_time)]
+
+CAP <- X[, .(sale_range = sprintf("%s-%s", min(price), max(price)),
+             sales = .N, volume = sum(price)/1000), sold_time]
+.caption <- paste0(sprintf("0-24h ago: Sales = %s | Volume = %.0fk", CAP[1, sales], CAP[1, volume]),
+                   sprintf("\n24-48h ago: Sales = %s | Volume = %.0fk", CAP[2, sales], CAP[2, volume]),
+                   sprintf("\n48-72h ago: Sales = %s | Volume = %.0fk",CAP[3, sales], CAP[3, volume]),
+                   "\nSource: https://cnftstats.github.io/")
+
+X <- X[, .N, .(price_range, market, sold_time)][order(price_range)]
+X[price_range %between% c(0,     2999),  x_label := paste0(price_range, "-", price_range + (100-1))]
+X[price_range %between% c(3000,  4999),  x_label := paste0(price_range, "-", price_range + (500-1))]
+X[price_range %between% c(5000,  9999),  x_label := paste0(price_range, "-", price_range + (1000-1))]
+X[price_range %between% c(10000, 24999), x_label := paste0(price_range, "-", price_range + (5000-1))]
+X[price_range >= 25000,                  x_label := "25000+"]
+
+.X <- X[, .(price_range, x_label)] %>% unique %>% .[order(price_range)]
+X[, x_label := factor(x_label, levels = .X$x_label)]
+X[, market := factor(market, levels = c("jpg.store", "cnft.io"))]
+
+ggplot(X, aes(x_label, N, fill = market, alpha = sold_time)) +
+  facet_grid(sold_time~.) +
+  geom_hline(yintercept = 0, color = "grey70") +
+  geom_bar(stat = "identity") +
+  geom_text(aes(label = stat(y), group = x_label),
+            stat = 'summary', fun = sum, vjust = -.5, hjust = +.55,
+            color = "springgreen4", size = 3) +
+  scale_y_continuous(expand = c(0, 20)) +
+  scale_fill_manual(values = c("jpg.store" = "springgreen3", "cnft.io" = "springgreen4")) +
+  scale_alpha_manual(values = c("0-24h ago" = .9, "24-48h ago" = .8, "48-72h ago" = .7), guide = "none") +
+  labs(x = "Price range", y = "Number of sales", fill = "",
+       caption = .caption) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = -45, vjust = +.5, hjust = 0,
+                                   color = "grey50", size = 8),
+        axis.text.y = element_text(color = "grey50", size = 8),
+        axis.title = element_text(color = "grey30", size = 10),
+        legend.position = "bottom", legend.justification = 'right', legend.direction = "horizontal",
+        legend.text = element_text(color = "grey50", size = 9),
+        legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"),
+        legend.box.spacing = unit(-10, "points"),
+        plot.caption = element_text(color = "#008B8B", vjust = +17, hjust = 0, size = 9),
+        # plot.margin = unit(c(0, 15, 0, 0), units = "pt"),
+        panel.spacing.y = unit(1, "lines"))
+```
+
 
 ## Column 2 {data-width=350}
 ### Sweep that floor: Lowest listings
@@ -180,9 +284,10 @@ datatable(X, class = 'compact stripe hover nowrap',
 
 # Rank {data-icon="fa-signal"}
 ## Column 1 {data-width=500, .tabset}
-### Linear scale
+### Listings x rank
 ```{r}
-X <- DT[price <= 15000]
+max_y <- 15000
+X <- DT[price <= max_y]
 scale_x <- c(seq(0, 2000, 250), seq(2500, 10000, 500))
 scale_x[scale_x == 0] <- 1
 scale_x[scale_x == 10000] <- 9999
@@ -196,7 +301,7 @@ gg <- ggplot(X, aes(asset_rank, price, shape = sc, customdata = link,
                                                       "</br>Sc:", sc)))) +
   geom_point(color = "steelblue4", alpha = .6) +
   scale_x_reverse(breaks = scale_x, expand = c(0.03, 0)) +
-  scale_y_continuous(n.breaks = 15) +
+  scale_y_continuous(n.breaks = 15, limits = c(0, max_y)) +
   labs(x = "Rank", y = "Listing price", color = "Market", shape = "Smart contract") +
   theme(legend.title = element_text(size = 10))
 
@@ -208,33 +313,137 @@ ggplotly(gg, tooltip = "text") %>%
 
 > Only listings below 15000 ada are displayed. Try clicking on the legend or datapoints.
 
-### Log scale
+<!-- ### Log scale -->
+<!-- ```{r} -->
+<!-- X <- DT[price <= 15000] -->
+<!-- scale_x <- c(seq(0, 2000, 250), seq(2500, 10000, 500)) -->
+<!-- scale_x[scale_x == 0] <- 1 -->
+<!-- scale_x[scale_x == 10000] <- 9999 -->
+<!-- gg <- ggplot(X, aes(asset_rank, price, shape = sc, customdata = link, -->
+<!--                     text = paste0(asset, -->
+<!--                                   "</br></br>", paste("Price:", price, -->
+<!--                                                       "</br>Last offer:", last_offer, -->
+<!--                                                       "</br>Rank:", asset_rank, -->
+<!--                                                       "</br>Rarity:", asset_rarity, -->
+<!--                                                       "</br>Market:", market, -->
+<!--                                                       "</br>Sc:", sc)))) + -->
+<!--   geom_point(color = "steelblue4", alpha = .6) + -->
+<!--   scale_x_reverse(breaks = scale_x, expand = c(0.03, 0)) + -->
+<!--   scale_y_continuous(n.breaks = 15, trans = "log2") + -->
+<!--   labs(x = "Rank", y = "Listing price (log)", color = "Market", shape = "Smart contract") + -->
+<!--   theme(legend.title = element_text(size = 10)) -->
+
+<!-- ggplotly(gg, tooltip = "text") %>%  -->
+<!--   layout(legend = list(x = .025, y = .97, bgcolor = 'rgba(255,255,255,0.6)'), -->
+<!--          xaxis = list(tickangle = 45)) %>% -->
+<!--   onRender(js) -->
+<!-- ``` -->
+
+<!-- > Only listings below 15000 ada are displayed. Try clicking on the legend or datapoints. -->
+
+### Sales x rank
 ```{r}
-X <- DT[price <= 15000]
+max_y <- 15000
+X <- DTS[price <= max_y]
+X[, sold_time := trunc(sold_at_days)]
+X[, sold_time := fcase(trunc(sold_at_days) == 0, "0-24h ago",
+                       trunc(sold_at_days) == 1, "24-48h ago",
+                       trunc(sold_at_days) == 2, "48-72h ago")]
 scale_x <- c(seq(0, 2000, 250), seq(2500, 10000, 500))
 scale_x[scale_x == 0] <- 1
 scale_x[scale_x == 10000] <- 9999
-gg <- ggplot(X, aes(asset_rank, price, shape = sc, customdata = link,
-                    text = paste0(asset,
-                                  "</br></br>", paste("Price:", price,
-                                                      "</br>Last offer:", last_offer,
-                                                      "</br>Rank:", asset_rank,
-                                                      "</br>Rarity:", asset_rarity,
-                                                      "</br>Market:", market,
-                                                      "</br>Sc:", sc)))) +
-  geom_point(color = "steelblue4", alpha = .6) +
+
+gg <- ggplot(X, aes(asset_rank, price, color = sold_time, alpha = sold_time)) +
+  geom_point(color = "springgreen4") +
   scale_x_reverse(breaks = scale_x, expand = c(0.03, 0)) +
-  scale_y_continuous(n.breaks = 15, trans = "log2") +
-  labs(x = "Rank", y = "Listing price (log)", color = "Market", shape = "Smart contract") +
+  scale_y_continuous(n.breaks = 15, limits = c(0, max_y)) +
+  scale_alpha_manual(values = c("0-24h ago" = 1,
+                                "24-48h ago" = 0.6,
+                                "48-72h ago" = 0.2)) +
+  labs(x = "Rank", y = "Sold price", color = "When") +
   theme(legend.title = element_text(size = 10))
 
 ggplotly(gg, tooltip = "text") %>% 
   layout(legend = list(x = .025, y = .97, bgcolor = 'rgba(255,255,255,0.6)'),
-         xaxis = list(tickangle = 45)) %>%
-  onRender(js)
+         xaxis = list(tickangle = 45))
 ```
 
-> Only listings below 15000 ada are displayed. Try clicking on the legend or datapoints.
+> Only listings below 15000 ada are displayed.
+
+### Listings distribution by rank range
+```{r fig.height=7, fig.width=8}
+X <- copy(DT)
+X <- X[complete.cases(rank_range), .(rank_range, market)]
+X <- X[, .N, .(rank_range, market)][order(rank_range)]
+num_listings <- nrow(X)
+
+X[, market := factor(market, levels = c("jpg.store", "cnft.io"))]
+X[, rank_range := factor(rank_range, levels = rev(levels(rank_range)))]
+
+ggplot(X, aes(rank_range, N, fill = market)) +
+  geom_hline(yintercept = 0, color = "grey70") +
+  geom_bar(stat = "identity", alpha = .8) +
+  geom_text(aes(label = stat(y), group = rank_range),
+            stat = 'summary', fun = sum, vjust = -.5, hjust = +.55,
+            color = "steelblue4", size = 3) +
+  scale_y_continuous(expand = c(0, 20)) +
+  scale_fill_manual(values = c("jpg.store" = "steelblue3", "cnft.io" = "steelblue4")) +
+  labs(x = "Rank range", y = "Number of listings", fill = "",
+       caption = sprintf("Floor: %d ada  |  Listings: %d\nSource: https://cnftstats.github.io/",
+                         min(DT$price), num_listings)) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = -45, vjust = +.5, hjust = 0,
+                                   color = "grey50", size = 8),
+        axis.text.y = element_text(color = "grey50", size = 8),
+        axis.title = element_text(color = "grey30", size = 9),
+        legend.position = "bottom", legend.justification = 'right', legend.direction = "horizontal",
+        legend.text = element_text(color = "grey50", size = 9),
+        legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"),
+        legend.box.spacing = unit(-10, "points"),
+        plot.caption = element_text(color = "#008B8B", vjust = +17, hjust = 0, size = 8),
+        # plot.margin = unit(c(0, 15, 0, 0), units = "pt"),
+        panel.spacing.y = unit(1, "lines"))
+```
+
+### Sales distribution by rank range
+```{r fig.height=9, fig.width=9}
+X <- copy(DTS)
+X[, sold_time := trunc(sold_at_days)]
+X[, sold_time := fcase(trunc(sold_at_days) == 0, "0-24h ago",
+                       trunc(sold_at_days) == 1, "24-48h ago",
+                       trunc(sold_at_days) == 2, "48-72h ago")]
+X <- X[complete.cases(rank_range), .(rank_range, market, sold_time)]
+X <- X[, .N, .(rank_range, market, sold_time)][order(rank_range)]
+X[, sold_time := sprintf("%s\nSales: %s", sold_time, sum(N)), sold_time]
+
+X[, market := factor(market, levels = c("jpg.store", "cnft.io"))]
+X[, rank_range := factor(rank_range, levels = rev(levels(rank_range)))]
+
+ggplot(X, aes(rank_range, N, fill = market)) +
+  facet_grid(sold_time~.) +
+  geom_hline(yintercept = 0, color = "grey70") +
+  geom_bar(stat = "identity", alpha = .8) +
+  geom_text(aes(label = stat(y), group = rank_range),
+            stat = 'summary', fun = sum, vjust = -.5, hjust = +.55,
+            color = "springgreen4", size = 3) +
+  scale_y_continuous(expand = c(0, 20)) +
+  scale_fill_manual(values = c("jpg.store" = "springgreen3", "cnft.io" = "springgreen4")) +
+  labs(x = "Rank range", y = "Number of sales", fill = "",
+       caption = "Source: https://cnftstats.github.io/") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = -45, vjust = +.5, hjust = 0,
+                                   color = "grey50", size = 8),
+        axis.text.y = element_text(color = "grey50", size = 8),
+        axis.title = element_text(color = "grey30", size = 9),
+        legend.position = "bottom", legend.justification = 'right', legend.direction = "horizontal",
+        legend.text = element_text(color = "grey50", size = 9),
+        legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"),
+        legend.box.spacing = unit(-10, "points"),
+        plot.caption = element_text(color = "#008B8B", vjust = +17, hjust = 0, size = 8),
+        # plot.margin = unit(c(0, 15, 0, 0), units = "pt"),
+        panel.spacing.y = unit(1, "lines"))
+```
+
 
 ## Column 2 {data-width=500, .tabset}
 ### Floor listings by rank range
